# quantum_galton_board

./: .gitignore  README.md  advanced_quantum_galton.py  main.py  noisy_quantum_galton.py  pyproject.toml  quantum_galton_board.py  quantum_galton_board_summary.md  requirements.txt  run.py  run_challenge_tests.py  universal_quantum_galton.py  visualize.py
env/: pyvenv.cfg
examples/: quickstart_exponential.sh  quickstart_gaussian.sh  quickstart_hadamard.sh
output/: challenge_report_20250810_155422.md  challenge_report_20250810_161851.md  challenge_report_20250810_162817.md
outputs/20250811_102147/: gaussian_layer_scaling_results.json
outputs/20250811_103111/: exponential_layer_scaling_results.json
outputs/20250811_103413/: exponential_layer_scaling_results.json  gaussian_layer_scaling_results.json
outputs/20250811_103806/: exponential_layer_scaling_results.json  gaussian_layer_scaling_results.json  hadamard_layer_scaling_results.json
outputs/20250811_104002/: exponential_layer_scaling_results.json  gaussian_layer_scaling_results.json  hadamard_layer_scaling_results.json
outputs/20250811_104224/: exponential_layer_scaling_results.json  gaussian_layer_scaling_results.json  hadamard_layer_scaling_results.json
qgb/: __init__.py  __main__.py  circuits.py  cli.py  metrics.py  noise.py  optimize.py  plot.py  samplers.py  targets.py
quantum_env/: pyvenv.cfg
tests/: test_circuits.py  test_exponential_angles.py  test_hadamard.py  test_metrics.py  test_targets.py
